fix: address issues from Code Review #9 (JPMS, serialization, metrics, tests)